# 91bcsabi

./: .gitignore  README.md
cardrawing/: CMakeLists.txt  main.cpp
week-1/day-2/first-task/: index.html  styles.css
week-1/day-3/Printing to the terminal window/: CMakeLists.txt  main.cpp
week-1/day-3/UserInput_Conditionals/: CMakeLists.txt  main.cpp
week-1/day-3/Variables_and_Arithmetic Assignment Operators/: CMakeLists.txt  main.cpp
week-1/day-3/drew_triangle/: main.cpp
week-1/day-4/Countfromto/: CMakeLists.txt  main.cpp
week-1/day-4/FizzBuzz/: main.cpp
week-1/day-4/GuesstheNumber/: CMakeLists.txt  main.cpp
week-1/day-4/Multiplication_table/: main.cpp
week-1/day-4/PrintEven/: main.cpp
week-1/day-4/draw_pyramid/: main.cpp
week-1/day-4/drew_triangle/: CMakeLists.txt  main.cpp
week-1/day-4/iWontcheatOntheExams/: CMakeLists.txt
week-1/day-5/: main.cpp
week-1/day-5/Append A/: CMakeLists.txt  main.cpp
week-1/day-5/AppendA/: CMakeLists.txt  main.cpp
week-1/day-5/ChangeElement/: main.cpp
week-1/day-5/Colors/: main.cpp
week-1/day-5/CompareLength/: main.cpp
week-1/day-5/DoubleItems/: CMakeLists.txt  main.cpp
week-1/day-5/Doubling/: main.cpp
week-1/day-5/Factorial/: main.cpp
week-2/day-3/test/: CMakeLists.txt  draw.cpp  draw10.cpp  draw11.cpp  draw12.cpp  draw13.cpp  draw13.h  draw14.cpp  draw15.cpp  draw16.cpp  draw2.cpp  draw3.cpp  draw4.cpp  draw5.cpp  draw6.cpp  draw7.cpp  draw8.cpp  draw9.cpp  main.cpp
week-2/day-3/test/cmake/: FindSDL2_all.cmake
week-4/day-3/: CMakeLists.txt
week-5/: CMakeLists.txt  main.cpp
(+176 files in other folders)
